<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.io.bookstore.activity.homeActivity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.io.bookstore.activity.profile.ProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.io.bookstore.activity.homeActivity.ui.language.LanguagesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.io.bookstore.activity.homeActivity.ui.country.CountryFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_country" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.io.bookstore.activity.homeActivity.ui.payment.PaymentFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.io.bookstore.activity.homeActivity.ui.deliveryAddress.DeliveryAddressFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>