<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.authentication.SignUpActivity">


    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_48dp"
        android:layout_marginTop="@dimen/margin_50dp"
        android:text="@string/shipment_address"
        android:textColor="@color/blue"
        android:textSize="@dimen/h"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_48dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/font_10"
            android:gravity="start"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:paddingBottom="@dimen/value_8"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textDirection="locale"
            android:textSize="@dimen/h2"

            app:drawableStartCompat="@drawable/ic_user" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvUserName"
        app:layout_constraintStart_toStartOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/font_10"
            android:gravity="start"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/value_8"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textDirection="locale"
            android:textSize="@dimen/h2"
            app:drawableStartCompat="@drawable/ic_mail" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneSignUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/font_10"
            android:gravity="start"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="10"
            android:paddingBottom="@dimen/value_8"
            android:textAlignment="viewStart"
            android:textDirection="locale"
            android:textSize="@dimen/h2"
            app:drawableStartCompat="@drawable/ic_phone_call" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPhone"
        app:layout_constraintStart_toStartOf="@+id/tvPhone"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/font_10"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/value_8"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textDirection="locale"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPass"
        app:layout_constraintStart_toStartOf="@+id/tvPass"
        app:layout_constraintTop_toBottomOf="@+id/tvPass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddressSignUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/font_10"
            android:gravity="start"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:paddingBottom="@dimen/value_8"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textDirection="locale"
            android:textSize="@dimen/h2"
            app:drawableStartCompat="@drawable/ic_place_black_24dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="@dimen/height_200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_48dp"
        android:background="@drawable/round_corner_button_yellow"
        android:fontFamily="@font/fontawesome"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvAddress"
        app:layout_constraintStart_toStartOf="@+id/tvAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="@dimen/h2"
        android:textStyle="normal"
        android:visibility="gone"
        app:fontFamily="@font/fontawesome"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/sign_in_now"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:fontFamily="@font/fontawesome"
        app:layout_constraintEnd_toEndOf="@+id/textView38"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />


</androidx.constraintlayout.widget.ConstraintLayout>
