<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.authentication.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/ivDiagonal"
            android:layout_width="120dp"
            android:layout_height="117dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/diagonal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivDiagonal"
            app:layout_constraintEnd_toEndOf="@+id/ivDiagonal"
            app:layout_constraintStart_toStartOf="@+id/ivDiagonal"
            app:layout_constraintTop_toTopOf="@+id/ivDiagonal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDiagonal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/font_10"
                android:gravity="start"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingBottom="@dimen/value_8"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textDirection="locale"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_user" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tvUserName"
            app:layout_constraintStart_toStartOf="@+id/tvUserName"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/font_10"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/value_8"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textDirection="locale"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="#57adee"
            android:fontFamily="@font/fontawesome"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tvPass"
            app:layout_constraintStart_toStartOf="@+id/tvPass"
            app:layout_constraintTop_toBottomOf="@+id/tvPass" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/new_user"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="normal"
            app:fontFamily="@font/fontawesome"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up_now"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            app:fontFamily="@font/fontawesome"
            app:layout_constraintEnd_toEndOf="@+id/textView38"
            app:layout_constraintStart_toStartOf="@+id/textView38"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/skip"
            android:textColor="#4CAF50"
            android:textSize="14sp"
            android:textStyle="bold"
            app:fontFamily="@font/fontawesome"
            app:layout_constraintEnd_toEndOf="@+id/tvPass"
            app:layout_constraintStart_toStartOf="@+id/tvPass"
            app:layout_constraintTop_toBottomOf="@+id/tvPass" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/forgot_password"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/tvPass"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tvPass"
            app:layout_constraintTop_toBottomOf="@+id/tvPass" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
