<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/four_dp"
    android:layout_marginRight="@dimen/four_dp"
    android:layout_marginBottom="@dimen/four_dp"
    app:cardCornerRadius="@dimen/two_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/five_dp"
        android:orientation="horizontal"
        android:padding="@dimen/eight_dp"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_5dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ivNotification"
                android:layout_width="@dimen/fiftyeight_dp"
                android:layout_height="@dimen/fiftyeight_dp"
                android:layout_gravity="center"
                android:src="@drawable/notify_payment_recieved"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvIconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/exo"
                android:gravity="center"
                android:text="@string/recived"
                android:textSize="@dimen/h3"
                android:textStyle="bold"
                android:visibility="gone"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/one_dp"
            android:layout_height="@dimen/one_dp"
            android:layout_marginStart="@dimen/five_dp"
            android:layout_marginEnd="@dimen/one_dp"
            android:background="@color/text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo"
                    android:text="@string/title"
                    android:textSize="@dimen/h1" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo"
                    android:gravity="right"
                    android:text="@string/date"
                    android:textSize="@dimen/h1"
                    android:visibility="visible"
                    tools:ignore="RtlHardcoded,SpUsage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo"
                    android:paddingTop="@dimen/five_dp"
                    android:paddingBottom="@dimen/five_dp"
                    android:text="@string/desc"
                    android:textSize="@dimen/h1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:fontFamily="@font/exo"
                    android:gravity="right"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="60 ₹"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/h1"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:ignore="HardcodedText,RtlHardcoded" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>